--- a/styles.css
+++ b/styles.css
@@ -61,11 +61,24 @@ body {
 
 .content-pair {
     display: flex;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
-    flex-direction: column;
-    gap: 1rem;
+    gap: 2rem;
+    margin-bottom: 1rem;
 }
+
+.content-pair img {
+    max-width: 50%;
+    height: auto;
+    flex: 1;
+}
+
+.content-pair p {
+    font-size: 24px;
+    flex: 1;
+}
+
 
 hr {
     border: none;
