--- a/styles.css
+++ b/styles.css
@@ -66,12 +66,11 @@ body {
     align-items: center;
     gap: 2rem;
     margin-bottom: 1rem;
+    flex-wrap: wrap;
 }
 
-.content-pair img {
-    max-width: 50%;
-    height: auto;
-    flex: 1;
+.content-pair.reverse {
+    flex-direction: row-reverse;
 }
 
 .content-pair p {
@@ -79,10 +78,13 @@ body {
     flex: 1;
 }
 
-.content-pair.reverse {
-    flex-direction: row-reverse;
+.content-image {
+    max-width: 100%;
+    height: auto;
+    flex: 1;
+    border: 1px solid black;
+    border-radius: 5px;
 }
-
 
 hr {
     border: none;
