--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
     gap: 2rem;
     flex-wrap: wrap;
     text-align: left;
@@ -74,13 +74,13 @@ body {
 }
 
 .content-pair p {
-    font-size: 36px;
-    flex: 1 1 300px;
+     font-size: 30px;
+    flex: 1 1 45%;
     margin: 0;
 }
 
 .content-image {
-    flex: 1 1 300px;  
+    flex: 1 1 45%;
     max-width: 100%;
     height: auto;
     border: 1px solid black;
