--- a/styles.css
+++ b/styles.css
@@ -63,29 +63,32 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
     gap: 2rem;
     flex-wrap: wrap;
-    text-align: left;
-}
-
-.content-pair.reverse {
-    flex-direction: row-reverse;
-}
-
-.content-pair p {
-     font-size: 30px;
-    flex: 1 1 45%;
-    margin: 0;
+    text-align: center;
 }
 
 .content-image {
-    flex: 1 1 45%;
+    flex: 1 1 40%;
     max-width: 100%;
     height: auto;
     border: 1px solid black;
     border-radius: 5px;
     object-fit: contain;
+}
+
+.text-box {
+    flex: 1 1 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+}
+
+.text-box p {
+    font-size: 24px;
+    margin: 0;
 }
 
 hr {
